implement state mgt with React Context

--- a/turingapp-ui/src/Task.css
+++ b/turingapp-ui/src/Task.css
@@ -1,21 +1,34 @@
 .task {
     /* border: 1px solid; */
     padding: 1em;
-    background-color: #000;
+    background-color: skyblue;
     color: #fff;
     display: flex;
-    justify-content: center;
-    font-size: 1.3em;
+    justify-content: space-evenly;
+    font-size: 1.5em;
     font-weight: bold;
     line-height: 0.6;
     border-radius: 0.5em;
     margin: 0.4em;
-    transition: background-color 0.5s ease;
-    /* transition-delay: 0.2s; */
-    /* transition-duration: 0.3s; */
+    /* transition: background-color 0.5s ease; */
+}
+
+.task_transform {
+    transform: rotateX(1turn);
+}
+
+.task_main {
+    display: flex;
+    flex-flow: column;
+}
+
+.task_main span {
+    font-size: 0.6em;
+    margin-top: 2em;
 }
 
 .strike {
+    background-color: lightgray;
     text-decoration: line-through;
 }
 
@@ -33,13 +46,20 @@
 
 .task_delete {
     position: absolute;
+    justify-self: center;
     flex: 1;
-    right: 2em;
+    right: 1em;
     border-radius: 0.5em;
-    padding: 0.3em 0.5em;
-    display: inline-block;
+    color: red;
+}
+
+.task_main:hover {
+    font-size: 1.2em;
+    transform: rotateX(1turn);
 }
 
 .task_delete:hover {
-    color: red;
+    font-size: 1.3em;
+    transform: rotateX(1turn);
 }
+
